--- a/service.css
+++ b/service.css
@@ -13,7 +13,14 @@ body {
     text-align: center;
     background: rgb(236, 194, 3);
   }
-  
+
+  h2{
+    color:white;
+    text-align:center;
+    font-size:2em;
+  }
+
+
   .header h1 {
     font-size: 50px;
     color: aliceblue;
@@ -55,22 +62,24 @@ body {
   display:inline-block;
   color:#fff;
   border-radius:3px 3px 0px 0px;
-  box-shadow: 0 0.5rem 0.8rem #00000080;
+  box-shadow: 0 0.5rem 0.8rem #eeeaea80;
 }
 .panels{
-  background:#fffffff6;
-  box-shadow: 0 2rem 2rem #00000080;
+  background:#8d0c66f6;
+  box-shadow: 0 2rem 2rem #f5f1f180;
   min-height:300px;
   width:200%;
   max-width:800px;
   border-radius:3px;
   overflow:hidden;
   padding:20px;  
+   
 }
 .panel{
   display:none;
   animation: fadein .8s;
 }
+
  
 
 @keyframes fadein {
@@ -89,13 +98,11 @@ body {
   display:none;
 }
 #one:checked ~ .panels #one-panel,
-#two:checked ~ .panels #two-panel,
-#three:checked ~ .panels #three-panel{
+#two:checked ~ .panels #two-panel{
   display:block
 }
 #one:checked ~ .tabs #one-tab,
-#two:checked ~ .tabs #two-tab,
-#three:checked ~ .tabs #three-tab{
+#two:checked ~ .tabs #two-tab{
   background:#fffffff6;
   color:#000;
   border-top: 3px solid #000;
