--- a/about.css
+++ b/about.css
@@ -50,12 +50,7 @@ body {
 }
 
 
-/* image */
-.resume {
-  background-color: none;
-  width: 50%;
-  padding: 20px;
-}
+ 
 
 /* Add a card effect for articles */
 .card {
@@ -70,7 +65,14 @@ body {
   display: table;
   clear: both;
 }
+#resume {
+  padding: 20px;
+  width: 50%;
+  height: 50%;
+}
+ 
 
+ 
 /* Footer */
 .footer {
   padding: 20px;
